--- a/OEBPS/Text/c136.xhtml
+++ b/OEBPS/Text/c136.xhtml
@@ -11,168 +11,170 @@
 </head>
 
 <body>
-    <h1>136　父と娘の戯れ</h1>
-    <p>　二人の持つ武器が衝突し、火花を散らす。</p>
-    <p>　メルセデスの持つハルバードはダンジョンのマスターキー……ツヴェルフ曰く、決して壊れない金属だ。</p>
-    <p>　それと正面からぶつかって罅の一つも入らないベルンハルトの槍もまた、疑いの余地なくマスターキーなのだろう。</p>
-    <p>　メルセデスは力任せにハルバードを薙ぎ、槍を弾いた。</p>
-    <p>　力比べならば重力で常に鍛え続けているメルセデスに分がある。</p>
-    <p>　そのまま腕を戻す勢いで内側に薙ぎ払うが、ベルンハルトは半歩下がるだけで回避し、素早く突きへ移行する。</p>
-    <p>　これをメルセデスは頬ギリギリで避け、首と肩の間に柄を挟むようにして動きを止めた。</p>
-    <p>　そしてベルンハルトの腹に蹴りを放つ。これで上手く吹き飛ばせれば槍を奪う事が出来るだろう。</p>
-    <p>　だがベルンハルトは蹴りを片手で防ぎ、槍を高々と持ち上げた。</p>
-    <p>　釣られるようにメルセデスも浮き上がり、仕方なく槍を放して空中で回転……遠心力を乗せてハルバードを振り下ろす。</p>
-    <p>　重い一撃。床が砕け、屋敷全体が揺れる。</p>
-    <p>　だがベルンハルトは既にその場におらず、少し離れた位置で余裕の笑みを浮かべていた。</p>
-    <p>　その余裕を崩すべく、たった今砕いた床の瓦礫を魔法で浮かせて射出する。</p>
-    <p>　だが瓦礫はベルンハルトに届かず静止し、それどころか岩の刃となってメルセデスに反逆した。</p>
-    <p>　土属性魔法で逆利用したのだろう。</p>
-    <p>　飛んでくる岩の刃を全て叩き落し、ベルンハルトとの距離を詰める。</p>
-    <p>　ベルンハルトも同じく接近し、二人の武器が高速で何度も激突した。</p>
-    <p>　一秒間に何度も金属音が鳴り響き、攻撃の余波で床に残痕が刻まれる。</p>
-    <p>　単純なパワーやスピードといった身体能力ならばメルセデスが有利だが、それでも攻めきれない。</p>
-    <p>　ベルンハルトにはメルセデスの短い戦歴では持ちえない経験と高い技術がある。</p>
-    <p>　何度目かの衝突の後に一度距離を空け、次はどう攻めるかをメルセデスは考える。</p>
+    <h1>136. 父女间的打闹</h1>
+    <p>两人的武器发生冲突，火花四溅。</p>
+    <p>梅赛德斯所拥有的斧枪是地下城的万能钥匙……茨瓦尔夫说，它是绝对不会损坏的金属。</p>
+    <p>从正面撞上而没有裂痕的伯恩哈特的枪也是毫无疑问的万能钥匙吧。</p>
+    <p>梅赛德斯用力地挥动斧枪，弹开了枪。</p>
+    <p>要比力量的话，在重力下不断锻炼的梅赛德斯是有优势的。</p>
+    <p>就那样以返还手臂的气势向内扫去，不过，伯恩哈特只需退半步回避，并快速地突刺。</p>
+    <p>梅赛德斯紧挨着脸颊避开了这个，用头和肩夹住枪使其停止了动作。</p>
+    <p>然后踢向伯恩哈特的肚子。如果这样得很好的话就可以抢枪了吧。</p>
+    <p>但是伯恩哈特用一只手挡住了踢击，高高举起了枪。</p>
+    <p>像是被钓到一样，梅赛德斯也浮出水面，没办法只好放开长矛在空中旋转……带着离心力挥下斧枪。</p>
+    <p>沉重的一击。地板碎了，整个房子都摇晃着。</p>
+    <p>但是伯恩哈特已经不在那里了，在稍微远一点的位置上露出了从容的笑容。</p>
+    <p>为了打破这个余裕，她用魔法将刚刚打碎的地板上的瓦砾射出。</p>
+    <p>但是瓦砾没有击中伯恩哈特反而静止了，并变成了岩石的刀刃击向梅赛德斯。</p>
+    <p>大概是土属性魔法的反利用吧。</p>
+    <p>梅赛德斯将飞来的岩石之刃全部击落，缩短与伯恩哈特的距离。</p>
+    <p>伯恩哈特也同样接近，两人的武器高速多次激战。</p>
+    <p>一秒钟内会发出好几次金属声音，攻击的余波会在地板上留下痕迹。</p>
+    <p>如果是单纯的力量和速度这样的身体能力的话，梅赛德斯是有利的，但是即使那样也攻不过来。</p>
+    <p>伯恩哈特有在梅赛德斯短促的战斗经历中无法拥有的经验和高超的技术。</p>
+    <p>在几次冲突后空出一次距离，梅赛德斯思考下一次该怎么进攻。</p>
     <p></p>
-    <p>“<span class="character">小手調べとしてはまずまず、といったところか。こんなものではないだろう？　メルセデスよ</span>”</p>
-    <p>“<span class="character">そちらこそ。この程度ならば私も苦労せずに済むのだがな</span>”</p>
+    <p>“<span class="character">就小试身手来说，还过得去。不该就这样算了的吧？梅赛德斯啊。</span>”</p>
+    <p>“<span class="character">你才是。这种程度的话，我也不辛苦了。</span>”</p>
     <p></p>
-    <p>　今の攻防はほんの腕試しのようなものだ。</p>
-    <p>　この程度の攻撃にすら対応出来ないならば、利用価値などない。</p>
-    <p>　ダンジョンだけ奪って、それで終わりだ。</p>
-    <p>　とりあえず、互いに最低限のレベルには達しているという分かり切った事実を改めて確認したに過ぎない。</p>
+    <p>现在的攻防战只是试看一下身手。</p>
+    <p>如果连这种程度的攻击都不能应对的话，就没有利用价值了。</p>
+    <p>只夺走地下城，然后就结束了。</p>
+    <p>总之，我们只是再次确认了相互之间已经达到了最低限度的事实。</p>
     <p></p>
-    <p>“<span class="character">近接戦は悪くない。では魔法はどうかな</span>”</p>
+    <p>“<span class="character">近战并不坏。那么魔法怎么样？</span>”</p>
     <p></p>
-    <p>　ベルンハルトが言うと同時に、メルセデスの立っている床が盛り上がった。</p>
-    <p>　素早く退避した直後に鉄の槍が生え、更に壁や床から次々と槍が生えてメルセデスを襲う。</p>
-    <p>　かつて国王の取り巻きを相手に一時的に共闘した時にも見せた鉄属性魔法だ。</p>
-    <p>　メルセデスが避ける先を予測していたように槍が生え、避けた先にまた別の槍が生えて休む間もない攻撃に晒される。</p>
-    <p>　槍の長さも自在のようで、壁から離れていればいいという問題でもない。</p>
-    <p>　どこにもいても射程圏内。気を抜けば次の瞬間串刺しにされているだろう。</p>
-    <p>　ならば、と高く跳んで天井を蹴る事でベルンハルトへ接近……しようとするが、それも阻まれる。</p>
-    <p>　天井からも槍が生えてメルセデスを迎撃し、咄嗟に身を捩って回避した事で体勢を崩したメルセデスが落下する。</p>
-    <p>　落ちるその先も待ってましたと槍が待ち構えているが、槍の一つ……その先端に爪先を合わせる事で、メルセデスは何と槍の先に乗ってしまった。</p>
-    <p>　これでもメルセデスが現在着ている服はシュタルクダンジョンを手に入れた時に宝物庫から手に入れた特別製だ。</p>
-    <p>　対刃、対熱、対衝撃に優れており、下手な鎧よりも頑丈に出来ている。</p>
-    <p>　高速で突き出された刃ならば貫かれる恐れもあるが、ただ刃の上に乗るだけならば問題はない。</p>
+    <p>伯恩哈特说的同时，梅赛德斯站着的地板也很动了起来。</p>
+    <p>梅赛德斯迅速躲避之后地上长出了铁枪，而且从墙壁和地板上不断长出枪袭击梅赛德斯。</p>
+    <p>这是曾经与国王的包围对手暂时共同战斗时也能看到的铁属性魔法。</p>
+    <p>正如梅赛德斯预测到要避开的地方一样长出了长枪，避开的地方又长出了别的枪，遭到了连休息时间都没有的攻击。</p>
+    <p>长枪的长度似乎也很自在，并不是说只要远离墙壁就可以了。</p>
+    <p>无论在哪里都在射程范围内。如果放松的话，下一个瞬间就会被串起来吧。</p>
+    <p>如果是这样的话，那么就跳高踢天花板接近伯恩哈特……虽然想要这样做，但也被阻止了。</p>
+    <p>天花板上也长出了长枪迎击梅赛德斯，梅赛德斯瞬间扭转了身体回避，身体崩溃了。</p>
+    <p>枪在等着落下的那一头，可是枪的一头……用脚尖对准了枪的前端，梅赛德斯竟然骑在了枪的前端。</p>
+    <p>即使是这样，梅赛德斯现在穿的衣服也是在得到斯塔克地牢时从宝物库得到的特别产品。</p>
+    <p>擅长对刃、对热、对冲击，比笨笨的铠甲更结实。</p>
+    <p>如果是高速凸出的刀刃的话可能会被贯穿，但是如果只是骑在刀刃上的话就没问题了。</p>
     <p></p>
-    <p>“<span class="character">さあどうする？　逃げ場はないぞ</span>”</p>
+    <p>“<span class="character">那么该怎么办呢？没有逃避的地方。</span>”</p>
     <p></p>
-    <p>　ベルンハルトが楽しそうに、そして期待するように言う。</p>
-    <p>　まさかこの程度で詰んだりはしないだろう？　という娘への問いかけだ。</p>
-    <p>　それに対しメルセデスも笑みを崩さないまま答えた。</p>
+    <p>伯恩哈特说得很开心，也很期待。</p>
+    <p>难道就这样不将死吗？这是对女儿的提问。</p>
+    <p>对此，梅赛德斯也笑着回答。</p>
     <p></p>
-    <p>“<span class="character">冗談だろう。逃げ場がないのはそちらの方だ</span>”</p>
+    <p>“<span class="character">你在开玩笑吧。没有逃避的地方的是你。</span>”</p>
     <p></p>
-    <p>　屋内という限定された空間ではベルンハルトの魔法は脅威だ。逃げ場がない。</p>
-    <p>　だがそれはメルセデスも同じ事。</p>
-    <p>　こんな狭い空間ならば、どこに逃げても魔法の攻撃圏内となる。</p>
+    <p>在室内这个有限的空间里，伯恩哈特的魔法是威胁。无处可逃。</p>
+    <p>但是这和梅赛德斯也是一样的。</p>
+    <p>在这么狭小的空间里，无论逃到哪里都会变成魔法攻击范围内。</p>
     <p></p>
     <p>“<span class="character">重力三十倍！</span>”</p>
     <p></p>
-    <p>　屋敷全体に重力魔法をかけ、逃げ場なしの空間攻撃を行った。</p>
-    <p>　自分まで巻き込んでしまうので多少出力は下げているが、普段から重力に慣らしているメルセデスと違って、いきなり重さが増す事に慣れていないベルンハルトならば三十倍でも十分効果的だろう。</p>
-    <p>　あちこちから生えていた槍が次々とへし折れ、ベルンハルトが頭を垂れるように姿勢を低くする。</p>
-    <p>　そこにメルセデスが悠々と近付いた。</p>
-    <p>　だが刃を振り下ろす事はせず、ベルンハルトをじっと見下ろしている。</p>
+    <p>对整个房子施加重力魔法，进行了无处可逃的空间攻击。</p>
+    <p>因为连自己都卷进去了，所以输出量多少会下降一些，但是和平时习惯重力的梅赛德斯不同，如果不习惯突然增加重量的伯恩哈特的话，即使是30倍也很有效。</p>
+    <p>从各处长出来的枪一个接一个地折了，伯恩哈特像垂着头一样低下了姿势。</p>
+    <p>梅赛德斯慢慢靠近了那里。</p>
+    <p>但是并没有挥下刀刃，而是一直俯视着伯恩哈特。</p>
     <p></p>
-    <p>“<span class="character">……どうした？　チャンスだぞ。まさか父の命を奪う事を今更躊躇しているわけではあるまい</span>”</p>
+    <p>“<span class="character">……怎么了？机会来了。难道现在还在犹豫夺走父亲的生命吗？</span>”</p>
     <p>“<span class="character">……</span>”</p>
     <p></p>
-    <p>　メルセデスはベルンハルトの首を狙ってハルバードを薙いだ。</p>
-    <p>　それと同時にメルセデスは確かに聞いた。ベルンハルトの心臓の鼓動を。</p>
-    <p>　本能が危険を察知し、すぐに攻撃を中断して一気に後ろに下がり、目の前をベルンハルトの槍先が掠めた。</p>
-    <p>　額から血が溢れ、床に赤い斑点が描かれる。</p>
-    <p>　予想通りではあったが、やはりこの程度で終わるほど簡単ではないらしい。</p>
-    <p>　メルセデスは額を指で拭う。</p>
-    <p>　すると、指が通った後は既に傷跡すらなく完治していた。</p>
+    <p>梅赛德斯瞄准伯恩哈特的脖子挥下斧枪。</p>
+    <p>与此同时，梅赛德斯确实听到了。伯恩哈特的心脏跳动。</p>
+    <p>本能察觉到了危险，立刻中断了攻击，立刻向后倒去，伯恩哈德的枪尖在身前一颤。</p>
+    <p>额头出血，地板上画着红色斑点。</p>
+    <p>虽然和预想的一样，但好像还是没有到这种程度就结束的那么简单。</p>
+    <p>梅赛德斯用手指擦额头。</p>
+    <p>于是，手指通过后就连伤痕也没有了，完全治好了。</p>
     <p></p>
-    <p>“<span class="character">血操術か</span>”</p>
-    <p>“<span class="character">そうだ</span>”</p>
+    <p>“<span class="character">是血操术吗？</span>”</p>
+    <p>“<span class="character">对了。</span>”</p>
     <p></p>
-    <p>　メルセデスの問いに、ベルンハルトが答えた。</p>
-    <p>　吸血鬼は血の流れこそが力を生み出す。そして普段よりも血の巡りを強く、速くする事で爆発的な身体能力を得る事が出来る。それが血操術だ。</p>
-    <p>　メルセデスにとっては本邸に来る以前から続けていた重力トレーニングで知らないうちに自力で身に付けていたものであり、普段から無意識で使い続けている……呼吸にも等しい基礎技能に過ぎない。</p>
-    <p>　普段から使っているという点ではベルンハルトも同じだろうが、今、それを意図的に強くしたのだろう。</p>
-    <p>　普段から使えるという事はつまり、その程度の負担でしかない。ならばそこから更に負担を増す事で身体能力の底上げをするのは、決して不可能ではないのだ。</p>
-    <p>　ベルンハルトの姿が消え、メルセデスはすぐにハルバードを右に向けて突き出す。</p>
-    <p>　かろうじて反応が間に合った絶好のカウンター……だが、ベルンハルトは笑みを浮かべたままハルバードを紙一重で避け、メルセデスの首に槍の先を突き付けていた。</p>
+    <p>伯恩哈特回答了梅赛德斯的问题。</p>
+    <p>吸血鬼只有血液的流动才能产生力量。而且比平时血液循环更强，速度快的话可以得到爆发性的身体能力。那就是血操术。</p>
+    <p>对梅赛德斯来说，这是在来本宅邸之前就一直在进行的重力训练中，在不知不觉中就学会了自己，平时就无意识地持续使用……不过是和呼吸一样的基础技能罢了。</p>
+    <p>从平时就开始使用这一点上来说，伯恩哈特也是一样的，但现在，伯恩哈特是有意识地加强了这一点的吧。</p>
+    <p>平时就可以使用的话，也就是说只能负担到这个程度。如果这样的话，通过增加负担来提高身体能力，绝对不是不可能的。</p>
+    <p>伯恩哈特消失了，梅赛德斯立刻将斧枪向右转。</p>
+    <p>好不容易才赶上了反应的绝好的计数器……但是，伯恩哈特带着微笑一下子避开了斧枪，将枪头对准了梅赛德斯的脖子。</p>
     <p></p>
-    <p>“<span class="character">いい反応だ</span>”</p>
+    <p>“<span class="character">反应不错。</span>”</p>
     <p></p>
-    <p>　そのまま躊躇なく突きだされた槍を、首の肉を僅かに抉られながらも回避。</p>
-    <p>　顔色一つ変えずに再生しながらすぐに次の攻撃へ移るが、ハルバードが力づくで弾かれてしまった。</p>
-    <p>　父が血操術で強化をした今、優位だったはずの身体能力が完全に逆転してしまっている。</p>
-    <p>　ベルンハルトの蹴りがメルセデスの腹に突き刺さり、小柄な身体が屋敷内の調度品や椅子を巻き込みながら吹き飛んで壁にめり込んだ。</p>
-    <p>　それでも表情を変えずにすぐに立ち上がろうとしたメルセデスだったが、高速で接近してきたベルンハルトが彼女の手首を槍で貫いた。</p>
+    <p>梅赛德斯就这样毫不犹豫地回避了捅过来的枪，虽然脖子上的肉被挖到了一点点。</p>
+    <p>脸色一点都没变，一边再生一边马上预测到下一个攻击，用斧枪用力弹了起来。</p>
+    <p>在父亲用血操术强化的现在，本应处于优势地位的身体能力完全逆转了。</p>
+    <p>伯恩哈特的踢击刺进了梅赛德斯的肚子，小个子的身体卷进了屋子里的家具和椅子，吹飞进了墙壁。</p>
+    <p>尽管如此，梅赛德斯还是没有改变表情，想要马上站起来，但是在高速接近她的伯恩哈特用枪贯穿了她的手腕。</p>
     <p></p>
-    <p>“<span class="character">……っ！</span>”</p>
-    <p>“<span class="character">素晴らしい身体能力、そして再生力だ。よく鍛えられている。これならば今まで誰が相手でも得意分野で負ける事はなかっただろう。その自慢の能力で上を往かれた気分はどうだ？</span>”</p>
+    <p>“<span class="character">……！</span>”</p>
+    <p>“<span class="character">好厉害的身体能力，还有再生能力。经常锻炼。这样的话，到现在为止谁都不会在擅长的领域输吧。那个引以为豪的能力被压制的心情怎么样？</span>”</p>
     <p></p>
-    <p>　ベルンハルトが愉快そうに言う。</p>
-    <p>　彼はこれで勝利したなどとは考えていない。何せまだお互い、全ての手札を晒していないのだから。</p>
-    <p>　しかしこれで、一つの答えが見られると確信していた。</p>
-    <p>　吸血鬼ひとは崖っぷちに追い詰められた時にこそ、本性が出る。</p>
-    <p>　どれほど普段は余裕ぶって大物であるかのような顔をしていても、余裕がなくなれば脆い素顔を露呈して泣き喚く。いくら善人ぶっていてもいざとなれば他人を見捨てて自分だけが助かろうとする。逆に普段は頼りない奴がいざという時には覚悟を決めたり、他人を助ける為に命を張る事もある。
-    </p>
-    <p>　そうした素顔をベルンハルトはこれまで、何度も見てきた。</p>
-    <p>　そして今、鉄仮面の奥に隠れていた娘の本性素顔が出る。</p>
+    <p>伯恩哈特愉快地说。</p>
+    <p>他并不认为这就是胜利。因为还没有互相晒出所有的手牌。</p>
+    <p>但是他坚信这样就能找到一个答案。</p>
+    <p>吸血鬼只有在被逼到悬崖边的时候才会露出本性。</p>
+    <p>无论平时有多悠闲，像是个大人物的脸，一旦没有富余，就会露出脆弱的素颜来哭喊。再怎么装好人，到了紧要关头也要抛弃别人，自己得救。相反，平时靠不住的人在关键时刻会下定决心，为了帮助他人而拼上性命。</p>
+    <p>伯恩哈特至今为止已经见过好几次这样的真实面貌。</p>
+    <p>然后现在，隐藏在铁面具深处的女儿的本性素颜出现了。</p>
     <p></p>
-    <p>“<span class="character">……悪くない気分だ</span>”</p>
+    <p>“<span class="character">……感觉不错。</span>”</p>
     <p></p>
-    <p>　――メルセデスは笑っていた。</p>
-    <p>　余裕の笑みとは違う。まるでこの苦戦を楽しむように、歪んだ素顔を曝け出していた。</p>
-    <p>　追いつめられているこの現状を、越えるべき壁が高いという現実を、面白いと感じて笑っているのだ。</p>
-    <p>　自らの安全が脅かされている崖っぷちで享楽を得るなど普通ではない。</p>
-    <p>　だがメルセデスとはそういう存在なのだろう。</p>
-    <p>　手こずらなければ達成感を得られない。</p>
-    <p>　苦しくなければ満足感を手に出来ない。痛くなければ実感が湧かない。</p>
-    <p>　逆境においてこそ満たされる、壊れた魂。</p>
-    <p>　そんな娘の素顔を前に、ベルンハルトもまた笑みを深くした。</p>
+    <p>——梅赛德斯笑了。</p>
+    <p>和从容的笑容不同。简直就像享受着这场苦战一样，暴露出了扭曲的真实面目。</p>
+    <p>笑着觉得很有意思，觉得应该跨越的障碍很高。</p>
+    <p>在威胁到自己安全的悬崖边享受安乐，这可不是一般的事。</p>
+    <p>但是，梅赛德斯就是这样的存在吧。</p>
+    <p>不费事就得不到成就感。</p>
+    <p>不痛苦的话就不能得到满足感。不痛的话就没有实感。</p>
+    <p>只有在逆境中才能满足，破碎的灵魂。</p>
+    <p>面对这样的女儿的真实面貌，伯恩哈特也笑得很深。</p>
     <p></p>
-    <p>“<span class="character">ああ、そうとも！　悪くないな、メルセデス！</span>”</p>
+    <p>“<span class="character">啊，是吗！还不错，梅赛德斯！</span>”</p>
     <p></p>
-    <p>　メルセデスの心臓が鼓動を速めた。</p>
-    <p>　血が今までよりも速く全身を駆け巡り、体温が上昇していく。</p>
-    <p>　普段から無意識で使っている血操術……それを今、意図的に速めた。</p>
-    <p>　槍に貫かれたまま手を強引に動かし、皮膚と筋肉がブチブチと音を立てて裂け、強引に脱出する。</p>
-    <p>　そのまま痛みを意に介さず再生しつつ、ベルンハルトの腹を蹴り飛ばした。</p>
-    <p>　ベルンハルトは壁に叩き付けられながらも、愉快そうに顔を歪める。</p>
+    <p>梅赛德斯的心脏加快了跳动。</p>
+    <p>血液比以前更快地在全身循环，体温上升。</p>
+    <p>平时无意识使用的血操术……现在，有意识地加快了这一点。</p>
+    <p>手被枪贯穿后强行移动，皮肤和肌肉发出咕嘟咕嘟的声音裂开，强行逃脱。</p>
+    <p>就这样不顾疼痛地再生，踢中伯恩哈特的肚子，把他打飞了。</p>
+    <p>伯恩哈特虽然被弹到了墙上，但脸上还是很愉快地扭曲着。</p>
     <p></p>
-    <p>“<span class="character">まだだ！　そうだろう？　まだ楽しめるな、娘よ！</span>”</p>
-    <p>“<span class="character">無論だとも！　父よ！</span>”</p>
+    <p>“<span class="character">还没呢！是吗？还在享受着玩乐，女儿啊！</span>”</p>
+    <p>“<span class="character">当然啦！爸爸！</span>”</p>
     <p></p>
-    <p>　二人の武器が中央で衝突し、同時に姿を消した。</p>
-    <p>　武器が激突する金属音だけが屋敷内で鳴り響き、壁や床、天井に傷跡が刻まれていく。</p>
-    <p>　戦いの巻き添えになったのだろうテーブルが両断され、シャンデリアが砕ける。</p>
-    <p>　壺が割れ、絵画が裂け……そして、壁に大穴が空いたほんの一秒後には激突の音が屋敷から遠ざかっていた。</p>
-    <p>　直線状にあった木々が次々と切断され、戦場を外へ移した親子が互いの手応えを確認するように再び武器をぶつけ合った。</p>
-    <p>　すぐに次の攻撃へと入ろうとしたベルンハルトの槍が重力で重くなり、その隙にメルセデスの渾身の蹴りが顔面にめり込んだ。</p>
-    <p>　ベルンハルトが木々をへし折りながら吹き飛び、それよりも速く接近したメルセデスがハルバードを振り下ろす。</p>
-    <p>　だが槍で防がれ、衝撃で飛ばされながらもベルンハルトは無数の槍を生み出して射出した。</p>
-    <p>　その悉くを叩き落すメルセデスだが、直後に悪寒を感じてその場から飛び退く。</p>
-    <p>　すると一瞬前までメルセデスがいた場所を、地面から生えた天を貫くほど巨大な槍が貫いた。</p>
-    <p>　だが一瞬もあれば今のメルセデスはベルンハルトに刃を余裕で届かせる事が出来る。</p>
-    <p>　既にベルンハルトの目の前まで切り込んでいたメルセデスがハルバードを振り上げ、同時にベルンハルトが槍を振り下ろす。</p>
-    <p>　肉が裂ける音が響き、血飛沫と共に二本の腕が宙を舞った。</p>
-    <p>　互いに左腕を奪われたが、戦意は衰えていない。</p>
-    <p>　痛みはある。再生力が高い故に痛覚の鈍い吸血鬼でも、流石に腕一本は激痛を感じる。</p>
-    <p>　しかし二人は汗を滲ませながらも、まるで怯む様子を見せない。</p>
-    <p>　一度距離を取って、落下してきた自らの腕を掴んで切断面に押し付ける。</p>
-    <p>　いかにメルセデスでも、腕一本を繋げるのはそう簡単な事ではない……というより、そもそも切断までされたのは初めてな気がする。</p>
-    <p>　だが血操術でブーストしている影響か、それとも今は気分が高揚しているからなのか……理由は分からないが、自分でも驚くほど早く腕が繋がった。</p>
-    <p>　ベルンハルトもどうやら既に腕を繋げたようで、二人はすぐに戦闘を再開する。</p>
-    <p>　もう何度目か分からない武器の衝突に空気が揺れ、周囲にいた野生動物が我先にとその場から逃げ出していく。</p>
+    <p>两人的武器在中央相撞，同时消失了踪影。</p>
+    <p>只有武器剧烈撞击的金属声在房内回响，墙壁、地板、天花板上都刻着伤痕。</p>
+    <p>可能是被卷入了战斗的桌子被两断，吊灯碎了。</p>
+    <p>壶碎了，画裂了……然后，墙上有个大洞，仅仅过了一秒，剧烈的撞击声就远离了房子。</p>
+    <p>直线状的树木一个接一个地被切断，将战场移到外面的父子为了确认彼此的反应再次互相碰撞武器。</p>
+    <p>打算马上进入下一个攻击的伯恩哈特的枪由于重力变得沉重，在那个间隙梅赛德斯使用全身力量的踢踢中了他的脸。</p>
+    <p>伯恩哈特一边折折着树一边吹飞，比那个更快接近的梅赛德斯挥下了斧枪。</p>
+    <p>但是被枪防御，被冲击飞出，伯恩哈特射出了无数的枪。</p>
+    <p>梅赛德斯全身都被击落了，但紧接着感到凉意从那里跳了出去。</p>
+    <p>就在那一瞬间，梅赛德斯所在的地方，有一支巨大的枪贯穿了从地面上长出的天空。</p>
+    <p>但是如果有一瞬间的话，现在的梅赛德斯可以从容地将刀刃送到伯恩哈特。</p>
+    <p>梅赛德斯已经切入伯伦哈特面前，举起斧枪，同时伯恩哈特挥下了枪。</p>
+    <p>肉裂开的声音响起，两只手臂伴随着血沫在空中飞舞。</p>
+    <p>虽然彼此的左臂都被夺走了，但战意并未衰退。</p>
+    <p>有疼痛。即使再生力高，还是痛觉迟钝的吸血鬼，没了一只手臂也会感到剧痛。</p>
+    <p>但是两个人虽然流着汗，却完全没有胆怯的样子。</p>
+    <p>取一次距离，抓住掉落下来的自己的手臂压在断面上。</p>
+    <p>不管怎么说，就算是梅赛德斯，连接一只手臂也不是那么简单的事……与其这么说，倒不如说是第一次被切断。</p>
+    <p>但是，是受了用血操术提升的影响，还是因为现在情绪高涨的缘故呢……虽然不知道理由，但手臂快速地连在了自己也吃惊的程度上。</p>
+    <p>伯恩哈特似乎也已经接上了手臂，两人马上重新开始战斗。</p>
+    <p>不知道是第几次的武器冲突使空气晃动，周围的野生动物争先恐后地从那里逃走。</p>
     <p></p>
-    <p>　父と娘の戯れはまだ始まったばかり。ここからが本番だと、二人の黄金の眼が静かに語っていた。</p>
-    <p>ベルンハルト“あはははは。よーし、パパ槍生やしちゃうぞー”</p>
-    <p>メルセデス“うふふふふ。負けないんだからー”</p>
-    <p>仲いいね、君等。</p>
+    <p>父女的玩笑才刚刚开始。两人的黄金之眼静静地说，接下来就是正式表演了。</p>
+    <p class="divline"></p>
+    <p>伯恩哈特“啊哈哈哈。好吧，我要做爸爸长矛”</p>
+    <p>梅赛德斯“唔呋呋呋。我不会输”</p>
+    <p>关系真好呢，你们俩。</p>
+    <p class="divline"></p>
     <p></p>
-    <p>本日コミック版第一巻が発売されました！</p>
+    <p>今天漫画版第一卷发售了！</p>
+    <p class="img" style="background-image:url('../Images/649d93472012a7aff3b1dac7d673537f.jpg');"></p>
     <p>挿絵(By みてみん)</p>
-    <p>もし見かけましたら、是非一度手に取ってみてもらえると嬉しいです。</p>
+    <p>如果你看到它，如果你能把它捡起来，我将不胜感激。</p>
 </body>
 
 </html>
