--- a/OEBPS/Text/c137.xhtml
+++ b/OEBPS/Text/c137.xhtml
@@ -11,140 +11,145 @@
 </head>
 
 <body>
-    <h1>137　激化</h1>
-    <p>　月が輝く夜の静寂の中、一つの影が木々の間から這い出した。</p>
-    <p>　緑色の肌に腰に付けた布、小さな体躯、鋭い牙……ゴブリンと呼ばれる魔物だ。</p>
-    <p>　魔物は基本的にはダンジョンで生まれてダンジョンで生きるが、ハンナが飼っている兎のように、時にはダンジョンから魔物が出てきてしまう事もある。</p>
-    <p>　このゴブリンもまた、そんなダンジョンから出てきた魔物の一つだ。</p>
-    <p>　ゴブリンは夢と野心に胸を膨らませながら、遠くに見える吸血鬼の都市を前に決意を固める。</p>
-    <p>《<span class="character">ここが吸血鬼の都市かあ。よーし……沢山嫁さん攫って、沢山子供作って、ここを俺の王国にするぞー！</span>》</p>
-    <p>　このゴブリンは、ダンジョンを徘徊するだけの日々に退屈してダンジョンを旅立った個体だ。</p>
-    <p>　彼の夢は、ダンジョンの中でのナンバーワンとなる事。</p>
-    <p>　だが生まれ育ったダンジョンの中では彼はナンバーワンどころかワーストワン……第一階層に配置された雑魚だ。</p>
-    <p>　下剋上など夢のまた夢。そこで彼は考えた。俺がトップになれる、俺だけの国を作ろう！</p>
-    <p>　ダンジョンに住む魔物が全て彼の嫁と彼の子ならば、必然的に彼がトップになれる。</p>
-    <p>　だから彼はここに来た。嫁にするならば強くタフで長生きな方がいい。</p>
-    <p>　その条件に当てはまるのは吸血鬼だ。</p>
-    <p>　吸血鬼は強い種族で、その辺を歩いているだけの一般人でもゴブリン一体くらいは素手で殴り殺せてしまう。</p>
-    <p>　だが、いくら強くても個体差というものがある。</p>
-    <p>　非戦闘員の女性……それも幼い個体ならば不意打ちで何とかなるかもしれない。</p>
-    <p>　そうして誘拐した嫁を育てて子供を産ませ、数が増えれば今度は大人の嫁を狙う。</p>
-    <p>　その繰り返しでコツコツやっていけば、いずれは大帝国だ。</p>
-    <p>　そんな未来を夢見て、ゴブリンは両腕を突き上げた。</p>
-    <p>《<span class="character">待っていてくれ、未来の嫁さん達！　第二のゴブ生、頑張るぞー！</span>》</p>
-    <p>　そうして決意と夢を高らかに宣言した直後――彼の首から上がすっ飛んだ。</p>
-    <p>　同時に周囲の木々も纏めて切断され、二つの影が駆け抜ける。</p>
-    <p>　影の正体は高速戦闘を続けているメルセデスとベルンハルトの親子だ。</p>
-    <p>　哀れなゴブリンを巻き込んだ事すら気にせず、二人は激しい攻防を繰り返している。</p>
-    <p>　ここまでの戦いで既に何度も重傷と呼べる傷を負った。手も足も切断された。</p>
-    <p>　吸血鬼でなければとっくに両方共死んで相打ちになっていただろう。</p>
-    <p>　だが、高い再生力を持つ吸血鬼同士の戦闘は基本的には不毛だ。</p>
-    <p>　死にさえしなければ再生出来る。腕も足も……一から再生するのは流石に時間がかかるが、切り落とされた手足を傷口に繋げるくらいは出来る。</p>
-    <p>　ならば勝敗を決するにはどうすればいいのか。それは相手を完全に仕留めるか、あるいは負けを認めさせるか、そのどちらかしかない。</p>
-    <p>　もう何度目になるか分からない武器の衝突の後に距離を空け、メルセデスはハルバードを強く掴む。</p>
-    <p>　ここまでの攻防で、メルセデスとベルンハルト自身の戦闘能力はほぼ互角だという事が分かった。</p>
-    <p>　普段は結んでいる髪がほどけ、服もボロボロだ。</p>
-    <p>　ベルンハルトも着ている服には激戦の跡が残っている。</p>
-    <p>　だがそこまでの戦いを経ても、両者共に無傷。傷はもう残っていない。</p>
-    <p>　このまま続けても朝まで決着が着かない。そう判断したメルセデスは、切り札のうちの一つを切る事にした。</p>
-    <p>　出し惜しみはしない。この一戦の勝利を掴むために、全て投入する。</p>
-    <p>“<span class="character">出ろ、夜の天敵――フェーニクス！</span>”</p>
-    <p>　ハルバードが輝き、メルセデスの背後に巨大な炎の鳥が顕現した。</p>
-    <p>　グレンツェダンジョンの守護者フェーニクス。メルセデス自身も苦戦させられた太陽の化身だ。</p>
-    <p>　対吸血鬼という点において、この炎の鳥ほど効果的な存在はいない。</p>
-    <p>　だからこそメルセデスは、この炎の鳥を召喚したのだ。</p>
-    <p>　フェーニクスは強く輝き、まだ夜中のはずだというのにまるで真昼になったかと勘違いしそうな明るさが周囲を照らした。</p>
-    <p>　木々を揺らす程の大音量で咆哮をあげ、ベルンハルトを敵と見定める。</p>
-    <p>“<span class="character">ほう、やはりグレンツェダンジョンはお前が手に入れていたか！　流石だ、娘よ！　ならば私も相応しい手駒で迎え撃たねばなあ！</span>”</p>
-    <p>　ベルンハルトが眩しそうに眼を細めながらも、どこか嬉しそうに声をあげる。</p>
-    <p>　槍を地面に突き立て、それと同時に彼の周囲を黒い煙が覆い尽くした。</p>
-    <p>　煙はベルンハルトの背後に集結して人型となり、その中から黒い腕が飛び出した。</p>
-    <p>“<span class="character">来い、我が僕――カタストローフェ</span>”</p>
-    <p>　それは黒い煙を纏った闇の巨人だった。</p>
-    <p>　恐らく実体はあるのだろうが、煙に隠れて腕しか見えない。</p>
-    <p>　更に煙の一部はベルンハルトを守るように展開され、フェーニクスの光がベルンハルトまで届かず遮られてしまっている。</p>
-    <p>　煙粒子は光を散乱させて遮ってしまう。地味だが、かなり厄介な相手だ、とメルセデスは思った。</p>
-    <p>　これではフェーニクスの強みがほぼ殺されてしまう。</p>
-    <p>“<span class="character">だがフェーニクスの能力は光だけではない。焼き尽くせ！</span>”</p>
-    <p>“<span class="character">捻じ伏せろ</span>”</p>
-    <p>　フェーニクスは炎の鳥だ。ならば光を封じられてもまだ戦える。</p>
-    <p>　全身に業火を纏って突進するフェーニクスを、煙の巨人が受け止めた。</p>
-    <p>　巨人の掌がフェーニクスの羽を握り潰すが、フェーニクスは炎が燃え続ける限り滅びる事のない不死の鳥だ。</p>
-    <p>　すぐに再生し、巨人の胸に嘴を突き刺す。</p>
-    <p>　巨人が倒れ、追いうちをかけるようにフェーニクスはその上に圧し掛かった。</p>
-    <p>　ダメージも軽くないようで、煙がどんどん薄れて視界が晴れていく。</p>
-    <p>　だが何故か、ベルンハルトは余裕の表情のままだ。</p>
-    <p>　煙は更に薄れて黒から白へと変わり、まるでドライアイスの煙を思い出させる。</p>
-    <p>　その光景を見ながらメルセデスは、前世で子供の頃に受けた理科の授業を思い出していた。</p>
-    <p>　何故ドライアイスの煙は白いのか。</p>
-    <p>　それは、気化した二酸化炭素によって空気中の水蒸気が冷やされて水の粒になるから……だったか。</p>
-    <p>“<span class="character">……っ！　二酸……しまった！　まずい、そこから離れろフェーニクス！</span>”</p>
-    <p>“<span class="character">もう遅い。逃がすな、カタストローフェ</span>”</p>
-    <p>　メルセデスの指示に従い、逃げようとするフェーニクスの頭を巨人が掴む。</p>
-    <p>　あの巨人は煙の構成を自在に操れるらしい。</p>
-    <p>　煙が黒から白に変わったのは弱ったからではない。二酸化炭素の純度が上がったからだ。</p>
-    <p>　つまり今、フェーニクスは二酸化炭素の塊の中に閉じ込められているも同然で、二酸化炭素は物を燃やす働きがない気体だ。</p>
-    <p>　酸素がなければ火は燃えない。燃える事が出来なければフェーニクスは不死鳥ではなくなる。</p>
-    <p>“<span class="character">戻れ、フェーニクス！</span>”</p>
-    <p>　このまま出していてもフェーニクスが負けるだけだ。</p>
-    <p>　仕方なくフェーニクスを戻すが、そうすれば当然煙の巨人はフリーになってしまう。</p>
-    <p>　敵のいなくなった煙の巨人とベルンハルトが同時に駆け出すが、メルセデスの腕輪が輝いた。</p>
-    <p>“<span class="character">いけ、パラディース！</span>”</p>
-    <p>“<span class="character">む……！</span>”</p>
-    <p>　煙の巨人の行く手を阻むように、植物で全身を形成した巨大な女性が地面から飛び出した。</p>
-    <p>　帝国で入手した、かつてはベアトリクスが所有していたダンジョンの守護者、パラディースだ。</p>
-    <p>　身体中から蔦が伸び、煙の巨人の手足に絡み付いて動きを止めた。</p>
-    <p>　フェーニクスと違って、こちらならば相性負けはない。</p>
-    <p>　パラディースは煙の巨人を蔦で縛り上げたまま持ち上げ、思い切り振り回す。</p>
-    <p>　どちらも巨大な屋敷以上の大きさを誇る怪物だ。迫力も半端ではない。</p>
-    <p>　地面に叩き付け、大地を大きく抉りながら更に振り回す。</p>
-    <p>　だが煙の巨人も負けてはいない。蔦を強引に引き千切り、パラディースの頭を掴んで強引に捩じ切ってしまった。</p>
-    <p>　……が、それで終わるならばメルセデスもパラディースを倒すのに苦労していない。</p>
-    <p>　パラディースは首を落とされたのも気にせず全身で煙の巨人を取り込み、先程よりも強く縛り上げる。</p>
-    <p>“<span class="character">二体目の守護者か。ならば……こういうのはどうだ？</span>”</p>
-    <p>　ベルンハルトが手袋を外し、親指に嵌めていた指輪が輝いた。</p>
-    <p>　まさか……とは思わなかった。</p>
-    <p>　ベルンハルトは、メルセデスがグレンツェダンジョンを入手したと知って、『やはり』と言った。</p>
-    <p>　それ以前にも一つ、ダンジョンを手に入れていた事くらいは当然把握しているだろうから、メルセデスが最低でも二つのダンジョン、二つの守護者を手に入れている事くらいは分かっていたはずだ。</p>
-    <p>　その上で彼は勝てると思ってこの戦いに臨んでいる。</p>
-    <p>　ならば考えるまでもなく、ベルンハルトもまた、二体の守護者を相手にしても勝てる自信があるという事だ。</p>
-    <p>　そもそもプラクティスダンジョンは普段は一般に解放している。</p>
-    <p>　それがどういう事かというと、ベルンハルトは普段はプラクティスダンジョンを使えないという事だが……ダンジョンという強力な力をいざという時に使えないようにするのは、少しばかり油断しすぎではないだろうか。</p>
-    <p>　しかしそれも、もう一つ切り札を隠し持っていたとするならば、話が変わる。</p>
-    <p>　まず、あの槍はプラクティスダンジョンのダンジョンキーだろう。</p>
-    <p>　以前の戦いの時は持っていなかったし、メルセデスが戦いを挑んでくると予想していながらダンジョンを遊ばせておくほど間抜けな男ではない。</p>
-    <p>　まず間違いなく、今はプラクティスダンジョンをダンジョンキーにしているはずだ。</p>
-    <p>　そしてもう一つ……彼は切り札を持っていた。</p>
-    <p>“<span class="character">切り刻め、ウーア・ゲヴァルト</span>”</p>
-    <p>　ベルンハルトの背後に竜巻が発生し、そのまま上空へと昇っていく。</p>
-    <p>　そして雲を割いて顔を出したのは巨大な蛇……いや、龍であった。</p>
-    <p>　ジークリンデのダンジョンもドラゴンがメインだが、ベルンハルトが出したのはドラゴンではない。</p>
-    <p>　西洋の竜ではなく、東洋の龍。</p>
-    <p>　この世界にそんな区別はないが、前世の記憶を持つからこそ違いが分かる。</p>
-    <p>“<span class="character">なるほど……ダンジョンを二つ持っていたか</span>”</p>
-    <p>“<span class="character">そうだ。お前と同じくな</span>”</p>
-    <p>“<span class="character">一応聞くが、実はまだプラクティスダンジョンをダンジョンキーにし忘れていた、とかはないな？</span>”</p>
-    <p>“<span class="character">私がそんな間抜けに見えるか？</span>”</p>
-    <p>　やはりベルンハルトは、メルセデスのダンジョン所有数を二つだと思っているようだ。</p>
-    <p>　今の返答が嘘でない限りは、これでベルンハルト側の所有するダンジョンは全て出た事になる。</p>
-    <p>　もしそうなら……有利なのはこちらだ。</p>
-    <p>　向こうにはまだ出していない魔物の軍勢もいるから、これでもまだ若干有利程度に過ぎないのが何とも恐ろしいが、だからこそ戦う甲斐もある。</p>
-    <p>“<span class="character">そうか。ならば……少し、私が有利だな</span>”</p>
-    <p>“<span class="character">何……？</span>”</p>
-    <p>“<span class="character">再び出ろ、フェーニクス！　そして……シュヴァルツ・ヒストリエ！</span>”</p>
-    <p>　出し惜しみはない。出来る相手でもない。</p>
-    <p>　変に勿体ぶって切り札を伏せていたら、伏せたままやられる。</p>
-    <p>　メルセデスの背後に炎の鳥と、腕組みをした巨人が顕現した。</p>
-    <p>　これで守護者は全て吐き出した。</p>
-    <p>　手札フルオープンの、オールレイズ。</p>
-    <p>　まだ切り札が相手にあるなら、別にそれでいい。諸共に踏み潰すだけだ。</p>
-    <p>　勿体ぶって伏せていたければそうすればいい。その時は出す間も与えずに終わらせる。</p>
-    <p>　守護者三体同時召喚――その光景を前に、ベルンハルトは愉快そうに顔を歪めた。</p>
+    <h1>137. 激化</h1>
+    <p>在月光皎洁的寂静夜晚中，一个影子从树木间爬了出来。</p>
+    <p>绿色的皮肤加在腰上的布、小小的身体、锐利的牙齿……是被称为哥布林的魔物。</p>
+    <p>魔物基本上是在地下城里出生，在地下城里生活，但有时也会有像汉娜养的兔子一样，从地下城里出来的魔物。</p>
+    <p>这只哥布林也是从那样的地下城出来的魔物之一。</p>
+    <p>哥布林满怀着梦想和野心，在远处可见的吸血鬼城市前下定了决心。</p>
+    <p>《<span class="character">“这里是吸血鬼的城市。好嘞……我要娶很多老婆，生很多孩子，把这里变成我的王国。”</span>》</p>
+    <p>这只哥布林是个在迷宫里游荡的日子里因为无聊而踏上了迷宫的个体。</p>
+    <p>他的梦想是成为地下城里的第一名。</p>
+    <p>但是在土生土长的地下城里，他非但没有第一名，反而是世界第一……被配置在第一层的杂鱼。</p>
+    <p>下克上等梦之又梦。于是他想了。让我成为第一名，创造只属于我的国家吧！</p>
+    <p>住在地下城里的魔物都是他的妻子和他的孩子的话，他必然会成为第一。</p>
+    <p>所以他来到了这里。找老婆的话，还是坚强、顽强、长寿的好。</p>
+    <p>符合那个条件的是吸血鬼。</p>
+    <p>吸血鬼是很强的种族，即使只是在那附近走着的普通人也会赤手空拳殴杀。</p>
+    <p>但是，再强也有个体差异。</p>
+    <p>非战斗员的女性……如果是年幼的个体的话，也许可以突然袭击。</p>
+    <p>然后把诱拐的媳妇养大，生孩子，数量增加的话，这次就瞄准大人的媳妇了。</p>
+    <p>如果反复努力的话，总有一天会成为大帝国。</p>
+    <p>梦想着那样的未来，戈布林举起了双臂。</p>
+    <p>《<span class="character">等着吧，未来的新娘们！第二个哥布生，加油！</span>》</p>
+    <p>就在他高呼决心和梦想之后——他的头突然飞了。</p>
+    <p>同时，周围的树木也被切断，两个影子飞驰而过。</p>
+    <p>影子的真面目是持续高速战斗的梅赛德斯和伯恩哈特的父女。</p>
+    <p>他们连卷入可怜的哥布林都不在意，两人反复着激烈的攻防战。</p>
+    <p>在这场战斗中已经负了好几次被称为重伤的伤。手和脚都被切断了。</p>
+    <p>如果不是吸血鬼的话，早就双方都死了，成为了对手了吧。</p>
+    <p>但是，拥有高再生力的吸血鬼之间的战斗基本上是不毛之地。</p>
+    <p>只要不死就可以再生。手臂和脚……从一开始再生的话的确要花时间，但能将被切下的手脚连接在伤口上。</p>
+    <p>那么，怎样才能决定胜负呢。那只能是完全杀死对方，或者是让对方承认失败。</p>
+    <p>不知道已经是第几次了，在武器冲突后空出了距离，梅赛德斯用力抓住了斧枪。</p>
+    <p>在迄今为止的攻防战中，梅赛德斯和伯恩哈特自身的战斗能力几乎是势均力敌的。</p>
+    <p>平时扎着的头发解开了，衣服也破破烂烂。</p>
+    <p>伯恩哈特也穿的衣服留下了激战的痕迹。</p>
+    <p>但是，即使经历了那样的战斗，两者都没有受伤。伤口已经没有了。</p>
+    <p>这样持续到早上也解决不了。梅赛德斯这样判断后，决定把王牌中的一个出掉。</p>
+    <p>不舍不得。为了抓住这一战的胜利，投入全力。</p>
+    <p>“<span class="character">出来吧，夜之天敌——菲尼克斯！</span>”</p>
+    <p>斧枪闪耀着光辉，梅赛德斯身后出现了巨大的火焰鸟。</p>
+    <p>格雷恩择地下城的守护者。梅赛德斯自身也是陷入苦战的太阳的化身。</p>
+    <p>在对吸血鬼这一点上，没有比这只火焰之鸟更有效的存在了。</p>
+    <p>正因为如此，梅赛德斯才召唤了这只火鸟。</p>
+    <p>它强烈地闪耀着光辉，明明应该还是半夜的，却仿佛误以为是白昼般的明亮照亮了周围。</p>
+    <p>发出摇动树木的大音量咆哮，断定伯恩哈特是敌人。</p>
+    <p>“<span class="character">“吼，果然格雷恩泽地下城是你得到的吗！不愧是女儿啊！那我也要用合适的棋子来迎击她！”</span>”</p>
+    <p>伯恩哈特目光炯炯地眯着眼睛，不知从哪里传来了喜悦的声音。</p>
+    <p>枪插在地上，同时黑烟笼罩了他的周围。</p>
+    <p>烟在伯恩哈特的背后集结成人形，从中飞出了黑色的手臂。</p>
+    <p>“<span class="character">来，我的仆从——卡塔斯特拉菲</span>”</p>
+    <p><span class="comment translator">カタストローフェ 德语【Katastrophe】  汉语【天灾】</span></p>
+    <p>那是一个笼罩着黑烟的黑暗巨人。</p>
+    <p>恐怕有实体吧，不过，在烟里（上）隐藏手臂以外看不见。</p>
+    <p>另外，一部分烟是为了保护伯恩哈特而展开的，菲尼克斯的光没有到达伯恩哈特而是被遮挡。</p>
+    <p>烟粒子散射光并遮挡住。梅赛德斯认为，虽然很朴素，但却是相当麻烦的对手。</p>
+    <p>这样的话，菲尼克斯的强项几乎就被抹杀了。</p>
+    <p>“<span class="character">但是，菲尼克斯的能力不仅仅是光，烧光它！</span>”</p>
+    <p>“<span class="character">扭下来</span>”</p>
+    <p>它是火焰之鸟。那么即使光被封印也还能战斗。</p>
+    <p>烟雾巨人接住了全身裹着业火突进的焚风。</p>
+    <p>巨人的手掌攥碎了菲尼克斯的翅膀，但菲尼克斯是只要火焰继续燃烧就不会毁灭的不死之鸟。</p>
+    <p>马上再生，用嘴刺进巨人的胸膛。</p>
+    <p>巨人倒下了，菲尼克斯像是要追击似的压在了上面。</p>
+    <p>损坏也不轻，烟渐渐淡了视野也变得晴朗。</p>
+    <p>但是不知为何，伯恩哈特还是一副从容的表情。</p>
+    <p>烟更薄了，由黑变白，让人想起干冰的烟。</p>
+    <p>看着这种情景，梅赛德斯想起了前世小时候上的理科课。</p>
+    <p>为什么干冰的烟是白色的。</p>
+    <p>那是因为汽化后的二氧化碳会使空气中的水蒸气冷却，变成水珠……吗。</p>
+    <p>“<span class="character">……！CO2……糟了！糟了，离开那里吧，我的菲尼克斯！</span>”</p>
+    <p>“<span class="character">已经很晚了。不要让它逃了，卡塔斯特拉菲。</span>”</p>
+    <p>巨人抓住了遵从梅赛德斯的指示，打算逃跑的菲尼克斯的头。</p>
+    <p>那个巨人似乎能自如地操纵烟的构成。</p>
+    <p>烟从黑变成白并不是因为变弱了。因为二氧化碳的纯度提高了。</p>
+    <p>也就是说，现在的菲尼克斯就像被困在二氧化碳块里一样，二氧化碳是没有燃烧物体作用的气体。</p>
+    <p>没有氧气，火就不会燃烧。如果不能燃烧的话，菲尼克斯就不是不死鸟了。</p>
+    <p>“<span class="character">回来，菲尼克斯！</span>”</p>
+    <p>就这样拿出来，也只会失败。</p>
+    <p>没办法，他只好恢复淡出，但这样做的话，烟雾巨人当然会变成自由。</p>
+    <p>消失了敌人的烟雾巨人和伯恩哈特同时开始奔跑，梅赛德斯的手镯闪耀着光芒。</p>
+    <p>“<span class="character">好，帕拉迪！</span>”</p>
+    <p>“<span class="character">嗯……！</span>”</p>
+    <p>像是要阻止烟雾巨人的去路一样，用植物形成全身的巨大女性从地面飞了出来。</p>
+    <p>这是在帝国得到的，曾经是贝尼克托克斯拥有的迷宫的守护者帕拉迪。</p>
+    <p>爬山虎从身体中伸长，缠绕在烟的巨人的手脚上停止了动作。</p>
+    <p>和菲尼克斯不同，如果是我们的话，相性是不会输的。</p>
+    <p>帕拉迪用爬山虎绑起烟的巨人，尽情地挥动。</p>
+    <p>无论哪一个都是拥有比巨大住宅还大身体的怪物。魄力也不是一般的。</p>
+    <p>敲打在地面上，用力地挖开大地，然后再挥舞。</p>
+    <p>然而，烟雾巨人也没有输。强行拉长爬山虎，抓住帕拉迪斯的头强行拧断了。</p>
+    <p>但是，如果就此结束的话，梅赛德斯也不会为了打倒帕拉迪而辛苦。</p>
+    <p>帕拉迪不顾自己的脖子被摔下来，全身吸入烟雾的巨人，比刚才更加用力地绑起来。</p>
+    <p>“<span class="character">第二个守护者吗？那……这样怎么样？</span>”</p>
+    <p>伯恩哈特摘下手套，戴在大拇指上的戒指闪闪发光。</p>
+    <p>没想到。</p>
+    <p>伯恩哈特知道梅赛德斯得到了格雷恩泽地牢，说了“果然”。</p>
+    <p>在那之前，当然也掌握了其中一个地牢，所以应该知道梅赛德斯至少能得到两个地牢和两个守护者。</p>
+    <p>而且他认为能赢而参加这场战斗。</p>
+    <p>这样的话就不必想了，伯恩哈特也有自信能战胜两个守护者。</p>
+    <p>说起来，实践地下城平时是对外开放的。</p>
+    <p>要说这是怎么回事的话，虽然伯恩哈特平时不能使用实践迷宫……但是要让地下城这种强大的力量在紧急时刻不能使用，是不是有点过于疏忽大意了呢。</p>
+    <p>但是，如果还有另一张王牌藏起来的话，话题就会改变。</p>
+    <p>首先，那个枪是实践地下城的地牢钥匙吧。</p>
+    <p>以前的战斗的时候没有，虽然预想着梅赛德斯会挑战战斗，但并不是让迷宫闲置的蠢男人。</p>
+    <p>首先毫无疑问，现在应该把实践地牢作为地下城钥匙。</p>
+    <p>然后还有一个……他拿着王牌。</p>
+    <p>“<span class="character">出来吧，乌格瓦特。</span>”</p>
+    <p><span class="comment translator">这个守护者的全名是 ウーア・ゲヴァルト， 按两个词来找的话是下面的时间·暴力，但是不看中间的·的话是一个19年游戏里的牙类道具</span></p>
+    <p><span class="comment translator">ウーア 德语【Uhr】 汉语【时间、时刻】</span></p>
+    <p><span class="comment translator">ゲヴァルト 德语【Gewalt】 汉语【暴力】</span></p>
+    <p>伯恩哈特的背后发生了龙卷风，就这样升至上空。</p>
+    <p>然后切开云露出脸的是巨大的蛇……不，是龙。</p>
+    <p>吉克林德的地下城也以龙为主，但伯恩哈特召唤的不是龙。</p>
+    <p>不是西洋的龙，而是东方龙。</p>
+    <p>虽然这个世界没有那样的区别，但是正因为有前世的记忆才能知道区别。</p>
+    <p>“<span class="character">原来如此……你有两个迷宫吗？</span>”</p>
+    <p>“<span class="character">对了，和你一样。</span>”</p>
+    <p>“<span class="character">我先问一下，你有没有忘记把实践地牢当地下城钥匙？</span>”</p>
+    <p>“<span class="character">我看起来那么愚蠢吗？</span>”</p>
+    <p>果然伯恩哈特认为梅赛德斯的地下城拥有数是两个。</p>
+    <p>只要现在的回答不是谎言，伯恩哈特方面所有的地牢就全部出来了。</p>
+    <p>如果是那样的话……有利的是这边。</p>
+    <p>因为对方也有还没有出现的魔物的军队，所以即使这样也只不过是有利程度，这真是太可怕了，正因为如此，才有战斗的价值。</p>
+    <p>“<span class="character">这样啊。那么……我稍微有点有利呢。</span>”</p>
+    <p>“<span class="character">什……？</span>”</p>
+    <p>“<span class="character">再来一次，菲尼克斯，出来吧！然后……舒瓦尔茨历史！</span>”</p>
+    <p>毫不吝惜。也不是能干的对手。</p>
+    <p>如果很奇怪地摆出一副很可惜的样子扣下了王牌，就会一直趴着被打。</p>
+    <p>梅赛德斯身后出现了火鸟和抱着胳膊的巨人。</p>
+    <p>守护者就这样全部吐出来了。</p>
+    <p>手牌完全打开的，全垒打。</p>
+    <p>如果对方还有王牌的话，那就另当别论了。只是大家一起践踏。</p>
+    <p>要是故意趴着就好了。那个时候出的时候也不给就结束了。</p>
+    <p>三位守护者同时召唤——在这一景象面前，伯恩哈特愉快地扭曲了脸。</p>
     <p></p>
-    <p>　――そして、遠くからでも見える、巨大な何かヤバイ奴らの戦いに、町の人々は大混乱に陥っていた。</p>
-    <p>グリューネヴァルト邸→近くの林</p>
-    <p>・冒頭のゴブリンのシーンで“遠くに見える町”と書いてますが、逆に言えば普通に目視出来る程度の距離。つまりメルセデスとベルンハルトは、町の凄い近くで戦ってます。</p>
-    <p>尚、当の二人は心情的には持ってるレアカードを自慢し合っているような感じです。平和！</p>
+    <p>——然后，在远处也能看到巨大的危险家伙们的战斗中，镇上的人们陷入了大混乱。</p>
+    <p class="divline"></p>
+    <p>格鲁内瓦尔特宅邸→附近的森林</p>
+    <p>・一开始的哥布林场景中，它说的是“可以在远处看到的城镇”，但反过来说，它是可以正常看到的距离。所以梅赛德斯和伯恩哈德在离镇子很近的地方打架。</p>
+    <p>此外，我们的两位似乎对拥有的稀有牌感到自豪。和平！</p>
 </body>
 
 </html>
